# Graphics3DCode_DanielLatos

./: CMakeLists.txt  assignments.md
Models/: square.mtl
src/Application/: shader_source.cpp
src/Assignments/CameraMovement/: app.cpp  app.h  camera.h  camera_controler.h  main.cpp
src/Assignments/Colors/: CMakeLists.txt  main.cpp
src/Assignments/Colors/shaders/: base_fs.glsl
src/Assignments/House/: CMakeLists.txt  app.cpp  main.cpp
src/Assignments/Indices/: CMakeLists.txt  app.cpp
src/Assignments/Materials/: CMakeLists.txt  app.cpp  main.cpp
src/Assignments/Materials/shaders/: base_vs.glsl
src/Assignments/Meshes/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Assignments/PVM/: app.cpp  main.cpp
src/Assignments/Phong/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Assignments/Pyramid/: CMakeLists.txt  app.cpp  main.cpp
src/Assignments/Resizing/: app.cpp  app.h  main.cpp
src/Assignments/Textures/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Assignments/Uniforms/: app.cpp  main.cpp
src/Assignments/Uniforms/shaders/: base_vs.glsl
src/Assignments/Zoom/: app.cpp  app.h  camera.h  main.cpp
src/Assignments/Zoom/shaders/: base_fs.glsl
src/Engine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Light.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  camera.h  camera_controler.h  mesh_loader.cpp  texture.cpp  texture.h
src/Engine/shaders/: color_fs.glsl  color_vs.glsl  phong_fs.glsl  phong_vs.glsl
src/ObjectReader/: CMakeLists.txt  obj_reader.cpp  obj_reader.h  sMesh.cpp  sMesh.h
